Changement des liens des images pour dist

--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -51,7 +51,7 @@
       <h1>Bienvenue sur SightMess</h1>
       <div class="indicators">
         <div class="compteur">
-          <img src="/assets/img/logo_oeil.svg"/>
+          <img src="./assets/img/logo_oeil.svg"/>
           <p style="text-align:center;">Cette page a été visitée <b style="color:rgb(250, 138, 47);">{{nbrVisite}}</b> fois</p>
         </div>
         <div>
@@ -76,19 +76,19 @@
     </div>
     <div class="listIcone">
       <div class="card">
-        <img src="/assets/img/logo_messenger.svg"/>
+        <img src="./assets/img/logo_messenger.svg"/>
         <h3>Fonctionne avec Messenger</h3>
         <p>Obtenez vos messages depuis Facebook et explorez toutes vos conversations.</p>
       </div>
       <div class="card">
-        <img src="/assets/img/logo_stats.svg"/>
+        <img src="./assets/img/logo_stats.svg"/>
         <h3>Trois panels complémentaires</h3>
         <p>-Analysez vos conversations</p>
         <p>-Obtenez vos caractéristiques propres</p>
         <p>-Découvrez votre profil Messenger</p>
       </div>
       <div class="card">
-        <img src="/assets/img/logo_wireless.svg"/>
+        <img src="./assets/img/logo_wireless.svg"/>
         <h3>Fonctionne sans internet</h3>
         <p>Nous ne stockons aucune de vos données personnelles.</p>
         <p>Seul vous avez accès aux informations affichées.</p> 
@@ -115,13 +115,13 @@
                 <p>Vous pouvez également la rejoindre depuis vos paramètres Facebook.</p>
               </div>
               <div class="imgSide">
-                <img src="/assets/img/tutoriel1.png"
+                <img src="./assets/img/tutoriel1.png"
                 class="imageTutorial2"/>
               </div>
             </div>
       <div class="oneStep">
         <div class="imgSide">
-          <img src="/assets/img/tutoriel2.png" 
+          <img src="./assets/img/tutoriel2.png" 
           class="imageTutorial2"/>
         </div>
         <div class="textSide2" style="margin-left:1%">
@@ -141,14 +141,14 @@
           <p>Après avoir attendu que Facebook créé votre dossier, vous pouvez télécharger vos messages ! <b>Vous serez notifié.</b></p>
         </div>
         <div class="imgSide">
-          <img src="/assets/img/tutoriel3.png" class="imageTutorial2"/>
-          <img src="/assets/img/tutoriel4.png" id="flecheBas"/>
-          <img src="/assets/img/tutoriel5.png" class="imageTutorial2"/>
+          <img src="./assets/img/tutoriel3.png" class="imageTutorial2"/>
+          <img src="./assets/img/tutoriel4.png" id="flecheBas"/>
+          <img src="./assets/img/tutoriel5.png" class="imageTutorial2"/>
         </div>
       </div>
       <div class="oneStep">
         <div class="imgSide">
-          <img src="/assets/img/tutoriel6.png" 
+          <img src="./assets/img/tutoriel6.png" 
           class="imageTutorial2"/>
         </div>
         <div class="textSide2" style="margin-left:1%">
@@ -168,9 +168,9 @@
           <p>Et... <b>C’est parti !</b></p>
         </div>
         <div class="imgSide">
-          <img src="/assets/img/tutoriel7.png" id="boutonUpload"/>
-          <img src="/assets/img/tutoriel4.png" id="flecheBas"/>
-          <img src="/assets/img/tutoriel8.png" class="imageTutorial2"/>
+          <img src="./assets/img/tutoriel7.png" id="boutonUpload"/>
+          <img src="./assets/img/tutoriel4.png" id="flecheBas"/>
+          <img src="./assets/img/tutoriel8.png" class="imageTutorial2"/>
         </div>
       </div>
       <div style="box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
@@ -178,7 +178,7 @@
         <hr class="overview">
         <p style="text-align:left">PS : Sur Chrome, vous aurez ce message, c'est normal !</p>
         <div class="imgSide">
-          <img src="/assets/img/tutoriel9.png" class="imageTutorial" style="margin-top:3%; margin-bottom:3%; height:15%; width:50%"/>
+          <img src="./assets/img/tutoriel9.png" class="imageTutorial" style="margin-top:3%; margin-bottom:3%; height:15%; width:50%"/>
         </div>
         <p style="text-align:center">Nous vous souhaitons une bonne utilisation et n'oubliez pas de donner votre avis.</p>
         <p style="text-align:right; margin-top:2%; margin-bottom:1%; margin-right:3%">L'équipe SightMess</p>
@@ -203,19 +203,19 @@
       <!--<div class="linkedinBox">
         <a href="https://www.linkedin.com/in/hugo-pillet-a29689152/" style="text-decoration:none;" target="_blank">
         <div class="oneLinkedin">
-          <img src="/assets/img/logo_linkedin.svg" class="logoLinkedin">
+          <img src="./assets/img/logo_linkedin.svg" class="logoLinkedin">
           <h3 style="margin-top:1%; color:black;  font-weight:unset;">Hugo Pillet</h3>
         </div>
         </a>
         <a href="https://www.linkedin.com/in/paul-tondereau-674552150/" style="text-decoration:none;" target="_blank">
         <div class="oneLinkedin">
-          <img src="/assets/img/logo_linkedin.svg" class="logoLinkedin">
+          <img src="./assets/img/logo_linkedin.svg" class="logoLinkedin">
           <h3 style="margin-top:1%; color:black; text-decoration:none; font-weight:unset; ">Paul Tondereau</h3>
         </div>
         </a>
         <a href="https://www.linkedin.com/in/paulwlf/" style="text-decoration:none;" target="_blank">
         <div class="oneLinkedin">
-          <img src="/assets/img/logo_linkedin.svg" class="logoLinkedin">
+          <img src="./assets/img/logo_linkedin.svg" class="logoLinkedin">
           <h3 style="margin-top:1%; color:black; text-decoration:none; font-weight:unset; ">Paul Wolf</h3>
         </div>
         </a>
