--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/reactions-stat/reactions-stat.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/reactions-stat/reactions-stat.component.html
@@ -3,7 +3,7 @@
     <div class="oneCard cardtopleft">
       <div class="sideText">
         <h2>Réactions de la conversation</h2>
-        <img class = "imgHelp" style="margin-top:0.55%" (click)="help('NbrReactionsConv')" src="/assets/img/logo_info.svg"/>
+        <img class = "imgHelp" style="margin-top:0.55%" (click)="help('NbrReactionsConv')" src="./assets/img/logo_info.svg"/>
       </div>
       <div class="sideImg">
         <div class="helpText" id="helpNbrReactionsConv">
@@ -39,7 +39,7 @@
     <div class="oneCard cardbotright">
       <div class="sideText">
         <h2>Réactions des participants</h2>
-        <img class = "imgHelp" style="margin-top:0.55%" (click)="help('NbrReactionsPerso')" src="/assets/img/logo_info.svg"/>
+        <img class = "imgHelp" style="margin-top:0.55%" (click)="help('NbrReactionsPerso')" src="./assets/img/logo_info.svg"/>
       </div>
       <div class="sideImg">
         <div class="helpText" id="helpNbrReactionsPerso">
