--- a/src/app/home-pannel-page/convs-pannel/previsu-conv/previsu-conv.component.html
+++ b/src/app/home-pannel-page/convs-pannel/previsu-conv/previsu-conv.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="numberPeopleDisplay" style="width:15%">
       <p>{{nbrParticipant}}</p>
-      <img src="/assets/img/nav_nbrpart.png">
+      <img src="./assets/img/nav_nbrpart.png">
     </div>
     <div class="nbrMessageDisplay" style="width:15%">
       <p>{{nbrMessage}} messages</p>
@@ -31,7 +31,7 @@
     </div>
     <div class="numberPeopleDisplay" style="width:15%">
       <p>{{nbrParticipant}}</p>
-      <img src="/assets/img/nav_nbrpart.png">
+      <img src="./assets/img/nav_nbrpart.png">
     </div>
     <div class="nbrMessageDisplay" style="width:15%">
       <p>{{nbrMessage}} messages</p>
