--- a/src/app/home-pannel-page/home-pannel-page.component.html
+++ b/src/app/home-pannel-page/home-pannel-page.component.html
@@ -16,7 +16,7 @@
 
   <div class="tPannel">
     <figure class="snip1477" (click)="switchPannel('ownStats')">
-      <img src="/assets/img/home_ownstat.svg" />
+      <img src="./assets/img/home_ownstat.svg" />
     <div class="title">
       <div>
         <h4>Stats globales</h4>
@@ -29,7 +29,7 @@
     </figure>
 
     <figure class="snip1477" (click)="switchPannel('statsConv')">
-      <img src="/assets/img/home_conv.svg" />
+      <img src="./assets/img/home_conv.svg" />
     <div class="title">
       <div>
         <h4>Conversations</h4>
@@ -42,7 +42,7 @@
     </figure>
 
     <figure class="snip1477" (click)="switchPannel('profil')">
-      <img src="/assets/img/home_profil.svg" />
+      <img src="./assets/img/home_profil.svg" />
     <div class="title">
       <div>
         <h4>Profil Messenger</h4>
