--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.html
@@ -4,22 +4,22 @@
      <h2>Information générale de la conversation</h2>
       <div class="explication">
         <div class="infoBox">
-          <img src="/assets/img/logo_male.svg"/>
+          <img src="./assets/img/logo_male.svg"/>
           <p>Premier message</p>
           <h5>{{firstToSpeak}}</h5>
         </div>
         <div class="infoBox">
-          <img src="/assets/img/logo_groupe.svg"/>
+          <img src="./assets/img/logo_groupe.svg"/>
           <p>Participants</p>
           <h5>{{nbParticipants}}</h5>
         </div> 
         <div class="infoBox">
-          <img src="/assets/img/logo_avionpapier.svg"/>
+          <img src="./assets/img/logo_avionpapier.svg"/>
           <p>Nombre de messages</p>
           <h5>{{nbMessages}}</h5>
         </div>
         <div class="infoBox">
-          <img src="/assets/img/logo_calendar.svg"/>
+          <img src="./assets/img/logo_calendar.svg"/>
           <p>Date création</p>
           <h5>{{dateCreationConv| date:'short'}}</h5>
         </div>
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div style="display:flex; height:8vh; padding-left: 2%;">
-            <img style="width: 2vw; height: 1.5vh; margin-left:0; margin-right: -5%;" src="/assets/img/logo_quickinfo.svg"/>
+            <img style="width: 2vw; height: 1.5vh; margin-left:0; margin-right: -5%;" src="./assets/img/logo_quickinfo.svg"/>
             <h5 style="margin-top:0;font-style: italic; color:#BFBFBF;width: 15vw; font-size: 0.6em; text-align: left; margin-left: 5%;">Nombre maximum de jours sans parler</h5>
         </div>
       </div>
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div style="display:flex; height:8vh; width:91%;">
-            <img style="width: 2vw; height: 1.5vh; margin-left:0; margin-right: -8%;" src="/assets/img/logo_quickinfo.svg"/>
+            <img style="width: 2vw; height: 1.5vh; margin-left:0; margin-right: -8%;" src="./assets/img/logo_quickinfo.svg"/>
             <h5 style="margin-top:0;font-style: italic; color:#BFBFBF;width: 15vw; font-size: 0.6em; text-align: left; margin-left: 5%;">Nombre de jours d'affilés pendant lesquels vous avez parlé à partir de maintenant</h5>
           </div>
       </div>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div style="display:flex; height:8vh; padding-left: 2%;">
-            <img style="width: 2vw; height: 1.5vh; margin-left:0; margin-right: -8%;" src="/assets/img/logo_quickinfo.svg"/>
+            <img style="width: 2vw; height: 1.5vh; margin-left:0; margin-right: -8%;" src="./assets/img/logo_quickinfo.svg"/>
             <h5 style="margin-top:0;font-style: italic; color:#BFBFBF;width: 15vw;font-size: 0.6em;">Nombre maximum de jours d'affilés pendant lesquels vous avez parlé</h5>
           </div>
       </div>
@@ -81,7 +81,7 @@
     <div class="oneCard cardbotleft">
       <div class="sideText">
         <h2>Influence des participants</h2>
-        <img class = "imgHelp" (click)="help('Influencer')" src="/assets/img/logo_info.svg"/>
+        <img class = "imgHelp" (click)="help('Influencer')" src="./assets/img/logo_info.svg"/>
       </div>
       <div class="sideImg">
         <div class="helpText" id="helpInfluencer">
