Changement svg et police

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,11 +7,11 @@
 
 @font-face {
     font-family: 'robotoReg';
-    src: url('/assets/police/roboto/Roboto-Regular.ttf');
+    src: url('./assets/police/roboto/Roboto-Regular.ttf');
 }
 @font-face {
     font-family: 'robotoLight';
-    src: url('/assets/police/roboto/Roboto-Light.ttf');
+    src: url('./assets/police/roboto/Roboto-Light.ttf');
 }
 /* Add application styles & imports to this file! */
 body {
