--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,7 +34,7 @@ p {
 }
 
 .cover {
-  background-image: url("../assets/img/cover.jpg");
+  background-image: url("../assets/img/cover.svg");
   background-size:cover;
   background-repeat: no-repeat;
   background-position: center center; 
