--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.html
@@ -27,7 +27,7 @@
 
     <div class="totalThreeCards">
       <div>
-        <div class="threeCards freezeCard">
+        <div style="max-height: 50px;" class="threeCards freezeCard">
           <div class="img"></div>
           <div class="threeCardsSmiley">
             <h1>{{freezeSmiley}}</h1>
@@ -43,7 +43,7 @@
       </div>
 
       <div>
-        <div class="threeCards fireCard">
+        <div style="max-height: 50px;" class="threeCards fireCard">
           <div class="img"></div>
           <div class="threeCardsSmiley">
             <h1>{{currentStreakSmiley}}</h1>
@@ -59,7 +59,7 @@
       </div>
 
       <div>
-        <div class="threeCards streakCard">
+        <div style="max-height: 50px;" class="threeCards streakCard">
           <div class="img"></div>
           <div class="threeCardsSmiley">
             <h1>{{maxStreakSmiley}}</h1>
