Correct double center

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,7 +37,7 @@ p {
   background-image: url("../assets/img/cover.jpg");
   background-size:cover;
   background-repeat: no-repeat;
-  background-position: center center; 
+  background-position: center; 
   height: 100%;
   //padding-top: 41vh;
   
