--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
@@ -386,7 +386,7 @@ hr.messageTitleBottom{
   bottom: 0;
   left: 0;
   right: 0;
-  background: url("./asset") center center;
+  background: url("../../../assets/img/card_freeze.jpg") center center;
   opacity: .4;
   width: 100%;
   height: 100%;
