--- a/src/styles.scss
+++ b/src/styles.scss
@@ -122,7 +122,7 @@ $green-palette: igx-palette($primary: #09f,$secondary: #72da67, $surface: #333);
     @include igx-dark-theme($green-palette);
 }
 
-::-webkit-scrollbar {
+/*::-webkit-scrollbar {
     width: auto;
 }
 
@@ -134,7 +134,7 @@ $green-palette: igx-palette($primary: #09f,$secondary: #72da67, $surface: #333);
 ::-webkit-scrollbar-track {
     background: #1A1837;
     border-radius: 10px;
-}
+}*/
 
 p, h1, h2 {
     font-family: "robotoLight";
