--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -107,8 +107,7 @@ $col) {
   font-size: 20px;
   width: inherit;
 
-  @include button(white,
-  "https://raw.githubusercontent.com/robin-dela/css-mask-animation/master/img/urban-sprite.png",
+  @include button(white, "../assets/img/effect_bouton.png",
   3000%,
   100%,
   none,
