--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
           </button>
         </div>
 
-        <div [ngStyle]="{'display':avisA ? 'Block' : 'None' }">
+        <!--<div [ngStyle]="{'display':avisA ? 'Block' : 'None' }">
           <div class="container">
             <div class="card" style="left: 90px;top: 80px;">
                 <div class="card__image-container">
@@ -167,7 +167,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
 
       </div>
     </div>
