--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.html
@@ -85,7 +85,7 @@
       </div>
       <div class="sideImg">
         <div class="helpText" id="helpInfluencer">
-          <p style="font-size:35%;">Le graph indique le top 5 vous incluant des influenceurs de la conversation</p>
+          <p style="font-size:35%;">Le graphe indique le top 5 vous incluant des influenceurs de la conversation</p>
           <h3 style="font-size:35%;">Les points d'influence sont calculés à partir de :</h3>
           <p style="margin-left:10%; margin-bottom:0; margin-top:0; font-size:35%;">- Nombre de messages envoyés</p>
           <p style="margin-left:10%; margin-bottom:0; margin-top:0; font-size:35%;">- Nombre de réactions reçues sur les messages</p>
