--- a/src/app/home-pannel-page/home-pannel-page.component.html
+++ b/src/app/home-pannel-page/home-pannel-page.component.html
@@ -27,7 +27,7 @@
     </figcaption>
     </figure>
 
-    <figure class="snip1477"  [routerLink]="['conv']">
+    <figure class="snip1477"  [routerLink]="['conv']" (click)="switchPannel('statsConv')">
       <img src="./assets/img/home_conv.svg" />
     <div class="title">
       <div>
@@ -39,7 +39,7 @@
     </figcaption>
     </figure>
 
-    <figure class="snip1477"  [routerLink]="['profil']">
+    <figure class="snip1477"  [routerLink]="['profil']" (click)="switchPannel('profil')">
       <img src="./assets/img/home_profil.svg" />
     <div class="title">
       <div>
