--- a/src/app/file-drop-page/loading-custom/loading-custom.component.html
+++ b/src/app/file-drop-page/loading-custom/loading-custom.component.html
@@ -12,9 +12,10 @@
 <img src="http://www.avocom971.fr/images2/bandeau-site-n.jpg" class="addGoogle" style="width:728px; height:90px; margin: auto; margin-top:3vh; margin-bottom: 3vh; display: block;"/>
 
 <div class="instruction">
-  <h3>Quelques instructions :</h3>
-  <p>- <b>Ne pas cliquer sur le bouton "Précédent" ou "Rafraichir" de votre navigateur</b> sinon vous reviendrez sur la première page du site.</p>
-  <p>- Nous vous conseillons d'utiliser le navigateur <b>Chrome</b> pour éviter des problèmes d'affichage.</p>
+  <h3 style="margin-left:1%">Quelques instructions :</h3>
+  <p style="margin-left:1%">- <b>Ne pas cliquer sur le bouton "Rafraichir" de votre navigateur</b> sinon vous reviendrez sur la première page du site.</p>
+  <p style="margin-left:1%">- Nous vous conseillons d'utiliser le navigateur <b>Chrome</b> pour éviter des problèmes d'affichage.</p>
+  <p style="margin-left:1%">- Pensez à <b>bien vous hydrater</b> l'été c'est important.</p>
   <hr style="margin-bottom: 0.5%; margin-top: 0.5%;" class="overview">
   <h3 style="margin-right:auto; margin-left:auto; text-align:center;">Bonne utilisation et n'hésitez pas à donner votre avis !</h3>
 </div>
