--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -288,8 +288,7 @@
       <app-loading-custom *ngIf="isLoading &&!loadingOk" [valeurChargement]="loadingPercent" style="overflow-x: hidden; overflow-y: hidden"></app-loading-custom>
     
       <!--Component principal avec les 3 pannels-->
-      <app-home-pannel-page *ngIf="loadingOk"
-        [listFilesDico]="listFilesDico"></app-home-pannel-page>
+      <router-outlet></router-outlet>
     </div>
     
     <div class="footer" *ngIf="!isCguVisible &&!isLoading">
