--- a/src/app/home-pannel-page/convs-pannel/convs-pannel.component.html
+++ b/src/app/home-pannel-page/convs-pannel/convs-pannel.component.html
@@ -1,4 +1,13 @@
 <div class="navigateur" *ngIf="!isStats">
+  <div class="wrapper" [routerLink]="['../../panels']">
+  <svg width="18px" height="17px" viewBox="0 0 18 17" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <g id="prev" transform="translate(8.500000, 8.500000) scale(-1, 1) translate(-8.500000, -8.500000)">
+          <polygon class="arrow" points="16.3746667 8.33860465 7.76133333 15.3067621 6.904 14.3175671 14.2906667 8.34246869 6.908 2.42790698 7.76 1.43613596"></polygon>
+          <polygon class="arrow-fixed" points="16.3746667 8.33860465 7.76133333 15.3067621 6.904 14.3175671 14.2906667 8.34246869 6.908 2.42790698 7.76 1.43613596"></polygon>
+          <path d="M-1.48029737e-15,0.56157424 L-1.48029737e-15,16.1929159 L9.708,8.33860465 L-2.66453526e-15,0.56157424 L-1.48029737e-15,0.56157424 Z M1.33333333,3.30246869 L7.62533333,8.34246869 L1.33333333,13.4327013 L1.33333333,3.30246869 L1.33333333,3.30246869 Z"></path>
+      </g>
+  </svg>
+</div>
   <div class="tooltipFirstRun" [ngStyle]="{'display':isConvStatFirstRun? 'Block' : 'None' }">
     <div class="enteteTooltip">
       <h1>Mes conversations</h1>
@@ -47,7 +56,7 @@
 </div>
 
 <div class="mainStats" *ngIf="isStats" >
-  <div class="wrapper" (click)="invertStat()" style="opacity:0">
+  <div class="wrapper" (click)="invertStat()">
     <svg width="18px" height="17px" viewBox="0 0 18 17" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <g id="prev" transform="translate(8.500000, 8.500000) scale(-1, 1) translate(-8.500000, -8.500000)">
             <polygon class="arrow" points="16.3746667 8.33860465 7.76133333 15.3067621 6.904 14.3175671 14.2906667 8.34246869 6.908 2.42790698 7.76 1.43613596"></polygon>
