--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
@@ -1112,3 +1112,63 @@ $mediumblu: #1E272D;
 .reajustContent{
   margin-top: -18vh;
 }
+
+//Button back
+
+$ease: cubic-bezier(.2,1,.3,1);
+  
+.wrapper {
+  position: absolute;
+  margin-left:5.5%;
+  transform: translate(-50%, -50%);
+  margin-top:3%;
+  
+  svg {
+    width: 100px;
+    height: 9vh;
+    margin: 0 2rem;
+    cursor: pointer;
+    overflow: visible;
+    polygon, path {
+      transition: all 0.5s $ease;
+      fill : #1A1837;
+    }
+    &:hover polygon, &:hover path {
+      transition: all 1s $ease;
+      fill: rgb(250, 138, 47);
+    }
+      
+    &:hover .arrow {
+      animation: arrow-anim 2.5s $ease infinite;
+    }
+    &:hover .arrow-fixed {
+      animation: arrow-fixed-anim 2.5s $ease infinite;
+    }
+  }
+}
+
+@keyframes arrow-anim {
+	0% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+	5% {
+		transform: translateX(-0.1rem);
+	}
+	100% {
+		transform: translateX(1rem);
+		opacity: 0;
+	}
+}
+
+@keyframes arrow-fixed-anim {
+	5% {
+		opacity: 0;
+	}
+	20% {
+		opacity: 0.4;
+	}
+	100% {
+		opacity: 1;
+	}
+}
