--- a/src/app/home-pannel-page/home-pannel-page.component.html
+++ b/src/app/home-pannel-page/home-pannel-page.component.html
@@ -1,4 +1,4 @@
-<div class="pannelHome" *ngIf="isHome && !isLoading">
+<div class="pannelHome" *ngIf="isHome">
   <div class="titlePanel">
     <h1>Vos panels</h1>
     <hr class="overview">
