--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
@@ -152,7 +152,7 @@
           <div class="sideTextBoxOverview">
             <p class="numberBox">{{nbMaxMessPer24.nbSent}}</p>
             <p class="descriptionBox">Nombre maximum de messages envoyés en 24h</p>
-            <p style="font-size: 0.7em;">({{nbMaxMessPer24.dateSent | date:short}})</p>
+            <p style="font-size: 0.7em;">({{nbMaxMessPer24.dateSent | date:'short'}})</p>
           </div>
         </div>
       </div>
@@ -165,7 +165,7 @@
           <div class="sideTextBoxOverview">
             <p class="numberBox">{{nbMaxMessPer24.nbReceived}}</p>
             <p class="descriptionBox">Nombre maximum de messages reçus en 24h</p>
-            <p style="font-size: 0.7em;">({{nbMaxMessPer24.dateReceived | date:short}})</p>
+            <p style="font-size: 0.7em;">({{nbMaxMessPer24.dateReceived | date:'short'}})</p>
           </div>
         </div>
       </div>
