Package lock adapté

--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -98,7 +98,7 @@
     <div class="lancezV">
       <h1>Analyser mes messages</h1>
       <hr class="overview">
-      <p>Cliquez sur le bouton ci-dessous et selectionnez votre dossier Facebook pour commencer l'analyse</p>
+      <p>Cliquez sur le bouton ci-dessous et sélectionnez votre dossier Facebook pour commencer l'analyse</p>
       <p>Vous n'avez pas encore votre dossier ? <a class="clickHere" (click)="showTutorial()">Cliquez ici</a> pour l'obtenir
       
     </div>
